--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,22 @@
 {
-    "name": "zendframework/zend-captcha",
+    "name": "laminas/laminas-captcha",
     "description": " ",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
+        "laminas",
         "captcha"
     ],
-    "homepage": "https://github.com/zendframework/zend-captcha",
-    "autoload": {
-        "psr-4": {
-            "Zend\\Captcha": "src/"
-        }
+    "homepage": "https://laminas.dev",
+    "support": {
+        "docs": "https://docs.laminas.dev/laminas-captcha/",
+        "issues": "https://github.com/laminas/laminas-captcha/issues",
+        "source": "https://github.com/laminas/laminas-captcha",
+        "rss": "https://github.com/laminas/laminas-captcha/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
-    "require": {
-        "php": ">=5.3.3",
-        "zendframework/zend-math": "self.version",
-        "zendframework/zend-stdlib": "self.version"
-    },
-    "require-dev": {
-        "zendframework/zend-session": "self.version",
-        "zendframework/zend-text": "self.version",
-        "zendframework/zend-validator": "self.version",
-        "zendframework/zendservice-recaptcha": "*",
-        "fabpot/php-cs-fixer": "1.7.*",
-        "satooshi/php-coveralls": "dev-master",
-        "phpunit/PHPUnit": "~4.0"
-    },
-    "suggest": {
-        "zendframework/zend-resources": "Translations of captcha messages",
-        "zendframework/zend-session": "Zend\\Session component",
-        "zendframework/zend-text": "Zend\\Text component",
-        "zendframework/zend-validator": "Zend\\Validator component",
-        "zendframework/zendservice-recaptcha": "ZendService\\ReCaptcha component"
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
@@ -39,9 +24,39 @@
             "dev-develop": "2.5-dev"
         }
     },
+    "require": {
+        "php": ">=5.3.3",
+        "laminas/laminas-math": "self.version",
+        "laminas/laminas-stdlib": "self.version",
+        "laminas/laminas-zendframework-bridge": "^1.0"
+    },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "1.7.*",
+        "laminas/laminas-recaptcha": "*",
+        "laminas/laminas-session": "self.version",
+        "laminas/laminas-text": "self.version",
+        "laminas/laminas-validator": "self.version",
+        "phpunit/phpunit": "~4.0",
+        "satooshi/php-coveralls": "dev-master"
+    },
+    "suggest": {
+        "laminas/laminas-recaptcha": "Laminas\\ReCaptcha component",
+        "laminas/laminas-resources": "Translations of captcha messages",
+        "laminas/laminas-session": "Laminas\\Session component",
+        "laminas/laminas-text": "Laminas\\Text component",
+        "laminas/laminas-validator": "Laminas\\Validator component"
+    },
+    "autoload": {
+        "psr-4": {
+            "Laminas\\Captcha\\": "src/"
+        }
+    },
     "autoload-dev": {
         "psr-4": {
-            "ZendTest\\Captcha\\": "test/"
+            "LaminasTest\\Captcha\\": "test/"
         }
+    },
+    "replace": {
+        "zendframework/zend-captcha": "self.version"
     }
 }
