--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,9 @@ docs_dir: docs/book
 site_dir: docs/html
 nav:
     - index.md
-    - { Intro: intro.md }
-    - { Usage: usage.md }
-    - { Adapters: adapters.md }
+    - Intro: intro.md
+    - Usage: usage.md
+    - Adapters: adapters.md
 site_name: laminas-captcha
 site_description: laminas-captcha
 repo_url: 'https://github.com/laminas/laminas-captcha'
