--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,18 @@
     "extra": {
     },
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.3 || ~8.0.0",
         "laminas/laminas-math": "^2.7 || ^3.0",
-        "laminas/laminas-stdlib": "^3.2.1",
-        "laminas/laminas-zendframework-bridge": "^1.0"
+        "laminas/laminas-stdlib": "^3.3",
+        "laminas/laminas-zendframework-bridge": "^1.1"
     },
     "require-dev": {
-        "laminas/laminas-coding-standard": "~1.0.0",
+        "laminas/laminas-coding-standard": "^2.1.1",
         "laminas/laminas-recaptcha": "^3.0",
-        "laminas/laminas-session": "^2.8",
-        "laminas/laminas-text": "^2.6",
-        "laminas/laminas-validator": "^2.10.1",
-        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.2"
+        "laminas/laminas-session": "^2.10",
+        "laminas/laminas-text": "^2.8",
+        "laminas/laminas-validator": "^2.14",
+        "phpunit/phpunit": "^9.4.3"
     },
     "suggest": {
         "laminas/laminas-i18n-resources": "Translations of captcha messages",
