qa: add PHP 8.1 to `composer.json`
Signed-off-by: Maximilian Bösing <2189546+boesing@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,9 @@
     "config": {
         "sort-packages": true
     },
-    "extra": {
-    },
+    "extra": {},
     "require": {
-        "php": "^7.3 || ~8.0.0",
+        "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-math": "^2.7 || ^3.0",
         "laminas/laminas-stdlib": "^3.3",
         "laminas/laminas-zendframework-bridge": "^1.1"
