--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "require": {
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-math": "^2.7 || ^3.0",
-        "laminas/laminas-stdlib": "^3.3",
-        "laminas/laminas-zendframework-bridge": "^1.1"
+        "laminas/laminas-stdlib": "^3.3"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.1.4",
@@ -62,7 +61,7 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     },
-    "replace": {
-        "zendframework/zend-captcha": "^2.9.0"
+    "conflict": {
+        "zendframework/zend-captcha": "*"
     }
 }
