--- a/composer.json
+++ b/composer.json
@@ -22,24 +22,20 @@
     "require": {
         "php": "^7.3 || ~8.0.0 || ~8.1.0",
         "laminas/laminas-math": "^2.7 || ^3.0",
-        "laminas/laminas-stdlib": "^3.6"
+        "laminas/laminas-recaptcha": "^3.0",
+        "laminas/laminas-session": "^2.12",
+        "laminas/laminas-stdlib": "^3.6",
+        "laminas/laminas-text": "^2.8",
+        "laminas/laminas-validator": "^2.14"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.1.4",
-        "laminas/laminas-recaptcha": "^3.0",
-        "laminas/laminas-session": "^2.12",
-        "laminas/laminas-text": "^2.8",
-        "laminas/laminas-validator": "^2.14",
         "phpunit/phpunit": "^9.4.3",
         "psalm/plugin-phpunit": "^0.15.1",
         "vimeo/psalm": "^4.6"
     },
     "suggest": {
-        "laminas/laminas-i18n-resources": "Translations of captcha messages",
-        "laminas/laminas-recaptcha": "Laminas\\ReCaptcha component",
-        "laminas/laminas-session": "Laminas\\Session component",
-        "laminas/laminas-text": "Laminas\\Text component",
-        "laminas/laminas-validator": "Laminas\\Validator component"
+        "laminas/laminas-i18n-resources": "Translations of captcha messages"
     },
     "autoload": {
         "psr-4": {
