--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "extra": {},
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0 || ~8.2.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "laminas/laminas-recaptcha": "^3.4.0",
         "laminas/laminas-session": "^2.12",
         "laminas/laminas-stdlib": "^3.10.1",
